lmorpho = executable('lmorpho',
                   sources: ['lmorpho.cpp', 'lsystem.cpp', 'lsys_models.cpp'],
                   dependencies: [dep_arb, dep_arborsup, dep_arborio, dep_tinyopt],
                   include_directories: [inc_arb_public],
                   install: false,
                   build_by_default: true)

